--- a/roles/router/templates/hosts.j2
+++ b/roles/router/templates/hosts.j2
@@ -2,9 +2,9 @@
 ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
 
 {% for host in groups['demo-vms'] %}
-{{ hostvars[host].ansible_host }}	{{ hostvars[host].hostname }}
+{% set ip = hostvars[host].ip | default('eth0:eth0:127.0.0.1') %}
+{% set ip = (ip.split(',') | first).split(':') | last | ipaddr('address') %}
+{% set domain_name = hostvars[host].domain_name | default('localdomain') %}
+{% set hostname = hostvars[host].hostname | default([ host, domain_name ] | join('.') ) %}
+{{ ip }} 		{{ hostname }}
 {% endfor %}
-
-{% if docker_mirror_host|default(False) %}
-docker_mirror_ip	{{ docker_mirror_host.split(':')[0] }}
-{% endif %}
